# clearance-fraud-detector

./: .gitignore  README.md  pyproject.toml
data/samples/: fraud_fso_ssn_verify.txt  fraud_mindbank_svp_escalation.txt  fraud_offer_letter_ssn_field.txt  fraud_tscti_self_attestation.txt  legitimate_offer_flow.txt
docs/: fso-meeting-reference.md  ssn-guidance-and-dcsa-tools.md
scripts/: run_validation.sh
src/clearance_fraud_detector/: __init__.py  cli.py  detector.py  report_generator.py  reporting.py
src/clearance_fraud_detector/analyzers/: __init__.py  company_verifier.py  contact_analyzer.py  domain_analyzer.py  job_posting_analyzer.py  nispom_compliance.py  nlp_analyzer.py  offer_letter_verifier.py  phone_analyzer.py  process_validator.py  rule_engine.py  vishing_analyzer.py  workforce_mapping_analyzer.py
src/clearance_fraud_detector/data/: __init__.py  cage_codes.py  fraud_patterns.py  known_contractors.py  known_staffing_firms.py
src/clearance_fraud_detector/parsers/: __init__.py  email_parser.py
src/clearance_fraud_detector/scoring/: __init__.py  explainer.py  scorer.py
tests/: test_cli_integration.py  test_company_verifier.py  test_detector.py  test_explainer.py  test_nispom_compliance.py  test_offer_letter.py  test_process_validator.py  test_report_generator.py  test_staffing_firms.py  test_validation_smoke.py  test_workforce_mapping.py
