[project]
name = "clearance-fraud-detector"
version = "0.2.0"
description = "Detect fraud emails targeting security clearance job seekers"
requires-python = ">=3.11"
dependencies = [
    "scikit-learn>=1.4",
    "numpy>=1.26",
    "pandas>=2.2",
    "nltk>=3.8",
    "spacy>=3.7",
    "python-whois>=0.9",
    "tldextract>=5.1",
    "rich>=13.7",
    "typer>=0.12",
    "pydantic>=2.6",
    "email-validator>=2.1",
    "joblib>=1.3",
    "phonenumbers>=8.13",
    "textual>=0.80",
    "rapidfuzz>=3.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "ruff"]

[project.scripts]
fraud-check = "clearance_fraud_detector.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clearance_fraud_detector"]
